--- a/Tienda/public/css/estilos.css
+++ b/Tienda/public/css/estilos.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 }
 
+body{
+  min-height: 100vh;
+}
+
 /* Estilos para el footer */
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
+
   }
   
   footer p {
