--- a/Tienda/sass_css/css/estilo.css
+++ b/Tienda/sass_css/css/estilo.css
@@ -32,15 +32,33 @@ body {
 .main{
     min-height: 100vh;
 }
-
+/* 
 
 .dropdown-menu li {
-    width: 200px; /* Ajusta el ancho según tus necesidades */
+    width: 200px; 
     display: flex;
     align-items: center;
   }
   
   .dropdown-menu li img.icono-comida {
-    margin-right: 10px; /* Ajusta el margen según tus necesidades */
+    margin-right: 10px; 
+  } */
+
+ 
+
+  .navbar-nav .nav-link {
+    display: flex;
+    align-items: center;
   }
+  
+  .icon-nav {
+    margin-left: 5px;
+    height: 2.5rem; 
+    width: 2.5rem;
+  }
+  
+  
+/* Estilos para el hover */
+
+
   
